--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="index.js"></script>
+    <title>Book Briefing</title>
 </head>
 <body>
-    
+    <h1>Welcome to Book Briefing</h1>
 </body>
 </html>
