--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
 </head>
 <body>
     <h1>Welcome to Book Briefing</h1>
+
+    <form>
+        <input type="text" id="title">
+        <input type="text" id="author">
+        <input type="text" id="content">
+        <button>Create Review</button>
+    </form>
+
 </body>
 </html>
