created the button type of submit for the form

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <input type="text" id="title">
         <input type="text" id="author">
         <input type="text" id="content">
-        <button>Create Review</button>
+        <button type="submit">Create Review</button>
     </form>
 
 </body>
