created an h3 tag to display to the user where the reviews will be and created a reviews-container dic

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <input type="text" id="content">
         <button type="submit">Create Review</button>
     </form>
+    <br>
+
+    <h3>All Reviews:</h3>
+    <div id="reviews_container">
+        
+    </div>
 
 </body>
 </html>
