syntax error correction

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <br>
 
     <h3>All Reviews:</h3>
-    <div id="reviews_container">
-        
+    <div id="reviews-container">
+
     </div>
 
 </body>
