added an event listener that will call upon create Review that will create the review

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body class="container">
     <h1>Welcome to Book Briefing</h1>
 
-    <form>
-        <input type="text" id="title">
-        <input type="text" id="author">
-        <textarea id="content" rows="8" cols="60" placeholder="Content"></textarea>
+    <form id="form">
+        <input type="text">
+        <input type="text">
+        <textarea rows="8" cols="60" placeholder="Content"></textarea>
         <button type="submit">Create Review</button>
     </form>
     <br>
